Add draft indicator to meeting detail view

--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -6,6 +6,11 @@ body {
     font-family: Source Code Pro, fixed;
 }
 
+.meeting-draft{
+    padding-left: 1rem;
+    color: #DD514C;
+}
+
 // .classdate {
 //     background-color: #000;
 //     color: #fff;
