Record pending requests to begin assignments and reflect in ui

--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -6,9 +6,13 @@ body {
     font-family: Source Code Pro, fixed;
 }
 
-.meeting-draft{
+.meeting-draft {
     padding-left: 1rem;
     color: #DD514C;
+}
+
+.btn-spinner {
+    padding-left: 1rem;
 }
 
 // .classdate {
