--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -2,6 +2,10 @@
 // @import '~bootstrap-sass/assets/stylesheets/bootstrap/_mixins.scss';
 // @import '~bootstrap-sass/assets/stylesheets/_bootstrap.scss';
 // can add Boostrap overrides, additional Sass/CSS below...
+html {
+    max-width: 900px;
+}
+
 body {
     font-family: Source Code Pro, fixed;
 }
@@ -19,3 +23,11 @@ body {
 //     background-color: #000;
 //     color: #fff;
 // }
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 1.25rem;
+    }
+    ul {
+        padding-left: 1rem;
+    }
+}
