--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -19,6 +19,10 @@ body {
     padding-left: 1rem;
 }
 
+select.engagement {
+    margin-left: 1rem;
+}
+
 // .classdate {
 //     background-color: #000;
 //     color: #fff;
