--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -24,6 +24,14 @@ select.engagement {
     margin-left: 1rem;
 }
 
+span.saved-quiz-option{
+    background-color: #999;
+    margin-left: 1rem;
+    color: #fff;
+    padding: 0 0.25rem;
+    font-size: small;
+}
+
 // .classdate {
 //     background-color: #000;
 //     color: #fff;
