Make code blocks look better

--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -61,6 +61,11 @@ table.dashboard {
 
 }
 
+code {
+    font-size: 100%;
+    background-color: #eee;
+}
+
 // .classdate {
 //     background-color: #000;
 //     color: #fff;
