Fix css styling of pre blocks

--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -60,9 +60,11 @@ table.dashboard {
     }
 
 }
+pre, code {
+    font-size: 100%;
+}
 
 code {
-    font-size: 100%;
     background-color: #eee;
 }
 
