Add live name search to student engagement tracking

--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -133,6 +133,11 @@ code {
         margin-bottom: 1rem;
     }
 
+    .engagement-user-query {
+        margin-bottom: 2rem;
+        font-size: 1rem;
+    }
+
     .student {
         display: flex;
         flex-direction: column;
