--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -111,6 +111,14 @@ code {
     background-color: #eee;
 }
 
+blockquote {
+    font-size: 1rem;
+    padding-left: 1.5rem;
+    border-left: 0.5rem solid lightgray;
+    font-style: normal;
+}
+
+
 // .classdate {
 //     background-color: #000;
 //     color: #fff;
