Add minimum width on quiz option inputs

--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -81,6 +81,7 @@ span.saved-quiz-option {
     align-items: baseline;
     input {
         margin-right: 0.5rem;
+        min-width: 1rem;
     }
     label p:first-child {
         margin-top: 0;
