Use font-display: swap

--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -13,6 +13,7 @@ html {
     font-family: 'Source Code Pro';
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: url('../fonts/source-code-pro-v10-latin-regular.eot');
     /* IE9 Compat Modes */
     src: local('Source Code Pro'), local('SourceCodePro-Regular'),
