--- a/elmclient/src/static/styles/main.scss
+++ b/elmclient/src/static/styles/main.scss
@@ -34,6 +34,7 @@ html {
     font-family: 'Source Code Pro';
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src: url('../fonts/source-code-pro-v10-latin-700.eot');
     /* IE9 Compat Modes */
     src: local('Source Code Pro Bold'), local('SourceCodePro-Bold'),
